<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="7"
    android:columnCount="4"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/output"
        android:textSize="45sp"
        android:fontFamily="monospace"
        android:layout_row="0"
        android:layout_rowWeight="2"
        android:layout_columnSpan="4"
        android:textColor="@color/colorAccent"
        />
    <Button
        android:id="@+id/clear_all"
        android:layout_row="1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/clear_all" />
    <Button
        android:id="@+id/clear"
        android:layout_row="1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/clear" />
    <Button
        android:id="@+id/num_7"
        android:layout_row="2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/seven"
        />
    <Button
        android:id="@+id/num_8"
        android:layout_row="2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/eight"
        />
    <Button
        android:id="@+id/num_9"
        android:layout_row="2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/nine"
        />
    <Button
        android:id="@+id/add"
        android:layout_row="2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/add"
        />
    <Button
        android:id="@+id/num_4"
        android:layout_row="3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/four"
        />
    <Button
        android:id="@+id/num_5"
        android:layout_row="3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/five"
        />
    <Button
        android:id="@+id/num_6"
        android:layout_row="3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/six"
        />
    <Button
        android:id="@+id/subtract"
        android:layout_row="3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/subtract"
        />
    <Button
        android:id="@+id/num_1"
        android:layout_row="4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/one"
        />
    <Button
        android:id="@+id/num_2"
        android:layout_row="4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/two"
        />
    <Button
        android:id="@+id/num_3"
        android:layout_row="4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/three"
        />
    <Button
        android:id="@+id/multiply"
        android:layout_row="4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/multiply"
        />
    <Button
        android:id="@+id/open_bracket"
        android:layout_row="5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/open_bracket"
        />
    <Button
        android:id="@+id/num_0"
        android:layout_row="5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/zero"
        />
    <Button
        android:id="@+id/closed_bracket"
        android:layout_row="5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/closed_bracket"
        />
    <Button
        android:id="@+id/divide"
        android:layout_row="5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/divide"
        />
    <Button
        android:id="@+id/memory_store"
        android:layout_row="6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/memory_store"
        />
    <Button
        android:id="@+id/memory_recall"
        android:layout_row="6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/memory_recall"
        />
    <Button
        android:id="@+id/decimal"
        android:layout_row="6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/decimal"
        />
    <Button
        android:id="@+id/equals"
        android:layout_row="6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/equals"
        />

</GridLayout>